feat(java-sample): migrate Spring Boot sample app to java/10-my-app-01